WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 173916
[GStreamer] LayoutTest webaudio/silent-audio-interrupted-in-background.html makes its subsequent test flaky crash
https://bugs.webkit.org/show_bug.cgi?id=173916
Summary
[GStreamer] LayoutTest webaudio/silent-audio-interrupted-in-background.html m...
Fujii Hironori
Reported
2017-06-28 02:52:29 PDT
Gtk port, Release build.
> fujii@ubuntu $ ./Tools/Scripts/run-webkit-tests --gtk --debug --no-new-test-results --child-processes=1 -v --iterations=5 webaudio/silent-audio-interrupted-in-background.html fast/css/001.html > Using port 'gtk-wk2' > Test configuration: <, x86, debug> > Placing test results in /home/fujii/work/webkit/ga/WebKitBuild/Debug/layout-test-results > Baseline search path: platform/gtk -> platform/wk2 -> generic > Using Debug build > Pixel tests disabled > Regular timeout: 30000, slow test timeout: 150000 > Command line: /home/fujii/work/webkit/ga/Tools/jhbuild/jhbuild-wrapper --gtk run /home/fujii/work/webkit/ga/WebKitBuild/Debug/bin/WebKitTestRunner - > > Found 2 tests; running 2 (5 times each: --repeat-each=1 --iterations=5), skipping 0. > > Running 2 tests > > Running 1 WebKitTestRunner. > > [1/10] fast/css/001.html passed > [2/10] webaudio/silent-audio-interrupted-in-background.html failed unexpectedly (WebProcess crashed [pid=67031]) > [3/10] fast/css/001.html passed > [4/10] webaudio/silent-audio-interrupted-in-background.html passed > [5/10] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=67130]) > [6/10] webaudio/silent-audio-interrupted-in-background.html passed > [7/10] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=67221]) > [8/10] webaudio/silent-audio-interrupted-in-background.html passed > [9/10] fast/css/001.html failed unexpectedly (WebProcess crashed [pid=67312]) > [10/10] webaudio/silent-audio-interrupted-in-background.html passed > > 6 tests ran as expected, 4 didn't: > > > Regressions: Unexpected crashes (1) > fast/css/001.html [ Crash ]
Attachments
gardening patch
(1.34 KB, patch)
2017-06-28 03:14 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
Patch
(7.04 KB, patch)
2018-02-08 03:26 PST
,
Philippe Normand
calvaris
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2017-06-28 03:04:17 PDT
Callstack:
> Thread 1 (Thread 0x7fff313ea700 (LWP 69091)): > #0 0x00007fffe95c7b56 in WTFCrash () at /home/fujii/work/webkit/ga/Source/WTF/wtf/Assertions.cpp:293 > #1 0x000055555885aa96 in (anonymous namespace)::AudioContext::lock (this=0x7fff78f81900, mustReleaseLock=@0x7fff313e83c8: 32) at /home/fujii/work/webkit/ga/Source/WebCore/Modules/webaudio/AudioContext.cpp:697 > #2 0x000055555884f4e7 in (anonymous namespace)::AudioContext::AutoLocker::AutoLocker (this=0x7fff313e83c0, context=...) at /home/fujii/work/webkit/ga/Source/WebCore/Modules/webaudio/AudioContext.h:207 > #3 0x0000555558885987 in (anonymous namespace)::MediaElementAudioSourceNode::setFormat (this=0x55555c8f69b0, numberOfChannels=2, sourceSampleRate=44100) at /home/fujii/work/webkit/ga/Source/WebCore/Modules/webaudio/MediaElementAudioSourceNode.cpp:95 > #4 0x0000555559f5fa61 in (anonymous namespace)::AudioSourceProviderGStreamer::deinterleavePadsConfigured (this=0x55555cafdc70) at /home/fujii/work/webkit/ga/Source/WebCore/platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:337 > #5 0x0000555559f5e580 in (anonymous namespace)::onGStreamerDeinterleaveReadyCallback (provider=0x55555cafdc70) at /home/fujii/work/webkit/ga/Source/WebCore/platform/audio/gstreamer/AudioSourceProviderGStreamer.cpp:51 > #6 0x00007fffda555e18 in ffi_call_unix64 () from /usr/lib/x86_64-linux-gnu/libffi.so.6 > #7 0x00007fffda55587a in ffi_call () from /usr/lib/x86_64-linux-gnu/libffi.so.6 > #8 0x00007fffe32dbf6e in g_cclosure_marshal_generic () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gclosure.c:1490 > #9 0x00007fffe32db735 in g_closure_invoke () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gclosure.c:804 > #10 0x00007fffe32ed742 in signal_emit_unlocked_R () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3635 > #11 0x00007fffe32f639c in g_signal_emit_valist () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3391 > #12 0x00007fffe32f677f in g_signal_emit () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3447 > #13 0x00007fff67dfbed8 in gst_deinterleave_add_new_pads () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gst-plugins-good-1.10.4/gst/interleave/deinterleave.c:285 > #14 gst_deinterleave_sink_setcaps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gst-plugins-good-1.10.4/gst/interleave/deinterleave.c:454 > #15 0x00007fff67dfc36d in gst_deinterleave_sink_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gst-plugins-good-1.10.4/gst/interleave/deinterleave.c:686 > #16 0x00007fffe55638b7 in gst_pad_send_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5605 > #17 0x00007fffe5563d7e in gst_pad_push_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5261 > #18 0x00007fffe5564190 in push_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3804 > #19 0x00007fffe5561d7f in events_foreach () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:603 > #20 0x00007fffe556e0e1 in check_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3861 > #21 gst_pad_push_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5392 > #22 0x00007fffe585ed2e in gst_pad_set_caps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstcompat.h:58 > #23 gst_base_transform_setcaps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1390 > #24 0x00007fffe58600dd in gst_base_transform_sink_eventfunc () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1942 > #25 0x00007fff677993bf in gst_capsfilter_sink_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/plugins/elements/gstcapsfilter.c:521 > #26 0x00007fffe55638b7 in gst_pad_send_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5605 > #27 0x00007fffe5563d7e in gst_pad_push_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5261 > #28 0x00007fffe5564190 in push_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3804 > #29 0x00007fffe5561d7f in events_foreach () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:603 > #30 0x00007fffe556e0e1 in check_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3861 > #31 gst_pad_push_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5392 > #32 0x00007fffe585ed2e in gst_pad_set_caps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstcompat.h:58 > #33 gst_base_transform_setcaps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1390 > #34 0x00007fffe58600dd in gst_base_transform_sink_eventfunc () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1942 > #35 0x00007fffe55638b7 in gst_pad_send_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5605 > #36 0x00007fffe5563d7e in gst_pad_push_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5261 > #37 0x00007fffe5564190 in push_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3804 > #38 0x00007fffe5561d7f in events_foreach () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:603 > #39 0x00007fffe556e0e1 in check_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3861 > #40 gst_pad_push_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5392 > #41 0x00007fffe585ed2e in gst_pad_set_caps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstcompat.h:58 > #42 gst_base_transform_setcaps () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1390 > #43 0x00007fffe58600dd in gst_base_transform_sink_eventfunc () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/libs/gst/base/gstbasetransform.c:1942 > #44 0x00007fffe55638b7 in gst_pad_send_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5605 > #45 0x00007fffe5563d7e in gst_pad_push_event_unchecked () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5261 > #46 0x00007fffe5564190 in push_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3804 > #47 0x00007fffe5561d7f in events_foreach () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:603 > #48 0x00007fffe556e0e1 in check_sticky () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:3861 > #49 gst_pad_push_event () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstpad.c:5392 > #50 0x00007fff677bcd98 in gst_queue_push_one () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/plugins/elements/gstqueue.c:1431 > #51 gst_queue_loop () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/plugins/elements/gstqueue.c:1508 > #52 0x00007fffe5598c21 in gst_task_func () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gsttask.c:334 > #53 0x00007fffe3029d0e in g_thread_pool_thread_proxy () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gthreadpool.c:307 > #54 0x00007fffe3029315 in g_thread_proxy () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gthread.c:784 > #55 0x00007fffe0c656da in start_thread (arg=0x7fff313ea700) at pthread_create.c:456 > #56 0x00007fffdf8b8d7f in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:105
Fujii Hironori
Comment 2
2017-06-28 03:07:36 PDT
Callstack (Release build)
> Thread 1 (Thread 0x7ffff7f21a80 (LWP 69897)): > #0 g_type_check_instance_cast () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gtype.c:4057 > #1 0x0000555556ebc220 in WebCore::AudioSourceProviderGStreamer::handleRemovedDeinterleavePad(_GstPad*) () > #2 0x00007fffe63b0e18 in ffi_call_unix64 () from /usr/lib/x86_64-linux-gnu/libffi.so.6 > #3 0x00007fffe63b087a in ffi_call () from /usr/lib/x86_64-linux-gnu/libffi.so.6 > #4 0x00007fffef136f6e in g_cclosure_marshal_generic () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gclosure.c:1490 > #5 0x00007fffef136735 in g_closure_invoke () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gclosure.c:804 > #6 0x00007fffef148742 in signal_emit_unlocked_R () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3635 > #7 0x00007fffef15139c in g_signal_emit_valist () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3391 > #8 0x00007fffef15177f in g_signal_emit () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gsignal.c:3447 > #9 0x00007ffff13a573b in gst_element_remove_pad () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstelement.c:825 > #10 0x00007ffff13a5a6b in gst_element_dispose () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstelement.c:3024 > #11 0x00007fffef13b3c5 in g_object_unref () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gobject.c:3148 > #12 0x00007ffff1385247 in gst_bin_remove_func () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstbin.c:1833 > #13 0x00007ffff1384347 in gst_bin_remove () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstbin.c:1895 > #14 0x00007ffff1384593 in gst_bin_dispose () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gstreamer-1.10.4/gst/gstbin.c:557 > #15 0x00007fffef13b3c5 in g_object_unref () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gobject.c:3148 > #16 0x00007fff6cf035d1 in gst_play_bin_finalize () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/gst-plugins-base-1.10.4/gst/playback/gstplaybin2.c:1617 > #17 0x00007fffef13b43a in g_object_unref () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/gobject/gobject.c:3185 > #18 0x0000555556e970b8 in WebCore::MediaPlayerPrivateGStreamerBase::~MediaPlayerPrivateGStreamerBase() () > #19 0x0000555556e93980 in WebCore::MediaPlayerPrivateGStreamer::~MediaPlayerPrivateGStreamer() () > #20 0x0000555556e93af9 in WebCore::MediaPlayerPrivateGStreamer::~MediaPlayerPrivateGStreamer() () > #21 0x00005555568f63ea in WebCore::MediaPlayer::~MediaPlayer() () > #22 0x00005555568f6479 in WebCore::MediaPlayer::~MediaPlayer() [clone .localalias.101] () > #23 0x00005555564915d2 in WebCore::HTMLMediaElement::clearMediaPlayer(WebCore::HTMLMediaElementEnums::DelayedActionType) () > #24 0x00005555564916d6 in WebCore::HTMLMediaElement::userCancelledLoad() () > #25 0x00005555564945a3 in WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer() () > #26 0x0000555556494602 in WebCore::HTMLMediaElement::stop() () > #27 0x00005555562ff0bb in WebCore::ScriptExecutionContext::stopActiveDOMObjects() () > #28 0x0000555556283d10 in WebCore::Document::stopActiveDOMObjects() () > #29 0x0000555556283e17 in WebCore::Document::prepareForDestruction() () > #30 0x0000555556773fe2 in WebCore::Frame::setView(WTF::RefPtr<WebCore::FrameView>&&) () > #31 0x0000555556776dfc in WebCore::Frame::createView(WebCore::IntSize const&, WebCore::Color const&, bool, WebCore::IntSize const&, WebCore::IntRect const&, bool, WebCore::ScrollbarMode, bool, WebCore::ScrollbarMode, bool) () > #32 0x00007ffff5776d0b in WebKit::WebFrameLoaderClient::transitionToCommittedForNewPage() () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #33 0x000055555663ec2a in WebCore::FrameLoader::transitionToCommitted(WebCore::CachedPage*) () > #34 0x000055555663ed73 in WebCore::FrameLoader::commitProvisionalLoad() () > #35 0x0000555556617c87 in WebCore::DocumentLoader::finishedLoading() () > #36 0x0000555556618279 in WebCore::DocumentLoader::maybeLoadEmpty() () > #37 0x000055555661b382 in WebCore::DocumentLoader::startLoadingMainResource() () > #38 0x000055555663f7a8 in WebCore::FrameLoader::continueLoadAfterNavigationPolicy(WebCore::ResourceRequest const&, WebCore::FormState*, bool, WebCore::AllowNavigationToInvalidURL) () > #39 0x000055555666d04b in WebCore::PolicyCallback::call(bool) () > #40 0x000055555667300d in WebCore::PolicyChecker::continueAfterNavigationPolicy(WebCore::PolicyAction) () > #41 0x00007ffff577ef30 in WebKit::WebFrameLoaderClient::dispatchDecidePolicyForNavigationAction(WebCore::NavigationAction const&, WebCore::ResourceRequest const&, WebCore::FormState*, WTF::Function<void (WebCore::PolicyAction)>&&) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #42 0x0000555556675691 in WebCore::PolicyChecker::checkNavigationPolicy(WebCore::ResourceRequest const&, bool, WebCore::DocumentLoader*, WebCore::FormState*, WTF::Function<void (WebCore::ResourceRequest const&, WebCore::FormState*, bool)>) () > #43 0x000055555663fbd4 in WebCore::FrameLoader::loadWithDocumentLoader(WebCore::DocumentLoader*, WebCore::FrameLoadType, WebCore::FormState*, WebCore::AllowNavigationToInvalidURL) () > #44 0x0000555556642690 in WebCore::FrameLoader::load(WebCore::FrameLoadRequest&&) () > #45 0x00007ffff57ab91f in WebKit::WebPage::loadRequest(WebKit::LoadParameters const&) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #46 0x00007ffff5995ca7 in void IPC::handleMessage<Messages::WebPage::LoadAlternateHTMLString, WebKit::WebPage, void (WebKit::WebPage::*)(WebKit::LoadParameters const&)>(IPC::Decoder&, WebKit::WebPage*, void (WebKit::WebPage::*)(WebKit::LoadParameters const&)) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #47 0x00007ffff5993909 in WebKit::WebPage::didReceiveWebPageMessage(IPC::Connection&, IPC::Decoder&) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #48 0x00007ffff557b309 in IPC::MessageReceiverMap::dispatchMessage(IPC::Connection&, IPC::Decoder&) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #49 0x00007ffff56ea406 in WebKit::WebProcess::didReceiveMessage(IPC::Connection&, IPC::Decoder&) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #50 0x00007ffff557702b in IPC::Connection::dispatchMessage(std::unique_ptr<IPC::Decoder, std::default_delete<IPC::Decoder> >) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #51 0x00007ffff5578018 in IPC::Connection::dispatchOneMessage() () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #52 0x00007ffff3ba2d5d in WTF::RunLoop::performWork() () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 > #53 0x00007ffff3bda3b9 in WTF::RunLoop::RunLoop()::{lambda(void*)#1}::_FUN(void*) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 > #54 0x00007fffeee5c6ea in g_main_dispatch () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gmain.c:3212 > #55 g_main_context_dispatch () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gmain.c:3865 > #56 0x00007fffeee5caa0 in g_main_context_iterate () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gmain.c:3938 > #57 0x00007fffeee5cdc2 in g_main_loop_run () at /home/fujii/work/webkit/ga/WebKitBuild/DependenciesGTK/Source/glib-2.52.1/glib/gmain.c:4134 > #58 0x00007ffff3bdade0 in WTF::RunLoop::run() () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libjavascriptcoregtk-4.0.so.18 > #59 0x00007ffff593d7ba in int WebKit::ChildProcessMain<WebKit::WebProcess, WebKit::WebProcessMain>(int, char**) () from /home/fujii/work/webkit/ga/WebKitBuild/Release/lib/libwebkit2gtk-4.0.so.37 > #60 0x00007fffeb62b3f1 in __libc_start_main (main=0x555555e311d0 <main>, argc=2, argv=0x7fffffffdce8, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7fffffffdcd8) at ../csu/libc-start.c:291 > #61 0x0000555555e3174a in _start ()
Fujii Hironori
Comment 3
2017-06-28 03:14:03 PDT
Created
attachment 314010
[details]
gardening patch
Michael Catanzaro
Comment 4
2017-06-28 06:56:32 PDT
Comment on
attachment 314010
[details]
gardening patch OK. Be sure to reopen this bug once commit-queue lands the gardening patch.
WebKit Commit Bot
Comment 5
2017-06-28 07:24:20 PDT
Comment on
attachment 314010
[details]
gardening patch Clearing flags on attachment: 314010 Committed
r218874
: <
http://trac.webkit.org/changeset/218874
>
WebKit Commit Bot
Comment 6
2017-06-28 07:24:22 PDT
All reviewed patches have been landed. Closing bug.
Fujii Hironori
Comment 7
2017-06-28 13:45:00 PDT
Reopened.
Philippe Normand
Comment 8
2018-02-08 03:26:21 PST
Created
attachment 333367
[details]
Patch
Philippe Normand
Comment 9
2018-02-08 05:11:09 PST
Committed
r228271
: <
https://trac.webkit.org/changeset/228271
>
Radar WebKit Bug Importer
Comment 10
2018-02-08 05:12:34 PST
<
rdar://problem/37349456
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug